# cbx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  run.py
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: cbx.rb.template
packaging/releases/v0.1.0/: cbx-voice-default-fp16.cbxvoice  cbx-voice-default-fp16.cbxvoice.sha256  cbx-voice-default-fp32.cbxvoice  cbx-voice-default-fp32.cbxvoice.sha256
packaging/scripts/: install.ps1  install.sh  install_default_voice.ps1  install_default_voice.sh  uninstall.ps1  uninstall.sh
scripts/: bench_macos.sh  install_local.sh  uninstall_local.sh
src/: audio.rs  chatterbox.rs  hf.rs  hf_sizes.rs  lib.rs  voice.rs
